# linux-dev-2020

./: LICENSE
03_TerminalProject/: Makefile  show.c
04_Multifile/: Makefile  fun.c  prog.c  run_test.sh
05_Environmental/: CMakeLists.txt  window.c
06_Debugging/: num_symbols.c
07_DebuggingTracing/: Makefile  wrapper.c
08_TestingCoverage/: CMakeLists.txt  buf.c  buf.h  tests.c
09_I18nL10n/: CMakeLists.txt  guesser.cpp
10_Documenting/: CMakeLists.txt  Doxyfile.in  guesser.cpp  guesser.po
11_Toolkits/: Makefile.am  word_counter.c
12_ScriptingText/: Makefile.am  configure.ac  word_counter.c  word_counter.h
13_PatchInstall/: CMakeLists.txt  guesser.cpp  guesser.po  guesser.pot
